# yolox_openvino

./: README.md
yolox_openvino/: CMakeLists.txt  package.xml
yolox_openvino/example/: yolox_openvino_example.cpp
yolox_openvino/include/yolox_openvino/: coco_names.hpp  core.hpp  utils.hpp  yolox_openvino.hpp
yolox_openvino/src/: yolox_openvino.cpp
yolox_openvino_plugin/: CMakeLists.txt  package.xml  yolox_openvino_plugin.xml
yolox_openvino_plugin/include/yolox_openvino_plugin/: yolox_openvino_plugin.hpp
yolox_openvino_plugin/src/: yolox_openvino_plugin.cpp
